--- a/platformio.ini
+++ b/platformio.ini
@@ -12,3 +12,9 @@
 platform = espressif32
 board = esp32dev
 framework = arduino
+
+upload_speed = 115200
+
+monitor_speed = 9600
+monitor_rts = 0
+monitor_dtr = 0
