--- a/platformio.ini
+++ b/platformio.ini
@@ -12,7 +12,9 @@
 platform = espressif32
 board = esp32dev
 framework = arduino
-lib_deps = knolleary/PubSubClient@^2.8
+lib_deps = 
+    knolleary/PubSubClient@^2.8
+    closedcube/ClosedCube HDC1080@^1.3.2
 
 upload_speed = 115200
 
