Restored old structure, added mqtt functionalities & tested

--- a/platformio.ini
+++ b/platformio.ini
@@ -15,6 +15,7 @@ framework = arduino
 lib_deps = 
     knolleary/PubSubClient@^2.8
     closedcube/ClosedCube HDC1080@^1.3.2
+    fastled/FastLED@^3.5.0
 
 upload_speed = 115200
 
