--- a/platformio.ini
+++ b/platformio.ini
@@ -13,17 +13,16 @@ platform = espressif32
 board = esp32dev
 framework = arduino
 lib_deps = 
-    knolleary/PubSubClient@^2.8
-    closedcube/ClosedCube HDC1080@^1.3.2
-    fastled/FastLED@^3.5.0
-    adafruit/DHT sensor library@^1.4.4
-
-
+	knolleary/PubSubClient@^2.8
+	closedcube/ClosedCube HDC1080@^1.3.2
+	fastled/FastLED@^3.5.0
+	adafruit/DHT sensor library@^1.4.4
+	tobiasschuerg/ESP8266 Influxdb@^3.12.1
 
 upload_speed = 921600
 
 monitor_speed = 57600
 monitor_rts = 0
 monitor_dtr = 0
-build_flags =
-    -I include
+build_flags = 
+	-I include
