--- a/platformio.ini
+++ b/platformio.ini
@@ -18,7 +18,8 @@ lib_deps =
 	adafruit/DHT sensor library@^1.4.4
 	tobiasschuerg/ESP8266 Influxdb@^3.12.1
 
-upload_speed = 921600
+; upload_speed = 921600
+upload_speed = 115200
 
 monitor_speed = 57600
 monitor_rts = 0
